# utils-insightface

./: Makefile  config.py  evaluate.py  plot_logs.py  torch2jit.py  torch2onnx.py
UMDFaces_utils/: 1-umd_utility.py  2-umd_remove_subfolder.py  3-umd_cnt.py  4-umd_resize.py
onnx-ncnn-inference/: CMakeLists.txt  Makefile  main.cpp  onnx_inference.py
onnx-ncnn-inference/models/ncnn/: model_opt.param
onnx-ncnn-inference/utility/: distance.cpp  distance.h  typedef.h  utility.cpp  utility.h
